--- a/test/fixtures/places.yml
+++ b/test/fixtures/places.yml
@@ -5,11 +5,11 @@ one:
   description: MyText
   tour_id: 1
   point_id: 1
-  guide_id: 1
+  user_id: 1
 
 two:
   title: MyString
   description: MyText
   tour_id: 1
   point_id: 1
-  guide_id: 1
+  user_id: 1
